Align the OSS lead - fixes #110

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -386,6 +386,8 @@ header#banner {
 
   .sticky-wrapper {
     height: 0px !important;
+    width: auto;
+    float: left;
   }
 
   #content {
